# sidus

./: README.md  docker-compose.env.example  docker-compose.yml
app/: pyproject.toml  worker.py
app/api/: router.py
app/api/user/: controller.py  schemas.py  services.py
app/core/: .env-example  app.py  config.py  redis.py  utils.py
app/core/di/: container.py
app/db/migrations/versions/: 2023-01-27-16-40_c55ef9b0f9e8.py
app/db/models/: user.py
app/requirements/: base.txt  development.txt
docker/: Dockerfile
