[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["koroteev-dmitry <desing94root@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.89.1"
uvicorn = "0.20.0"
pydantic = {extras = ["dotenv"], version = "^1.10.4"}
ujson = "^5.7.0"
python-dotenv = "^0.21.1"
sqlmodel = "^0.0.8"
asyncpg = "^0.27.0"
alembic = "^1.9.2"
passlib = "^1.7.4"
python-jose = "^3.3.0"
python-multipart = "^0.0.5"
aioredis = "^2.0.1"
dependency-injector = "^4.41.0"
redis = "^4.4.2"
celery = "4.4.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
